<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="10dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="30dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_page"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/dialog_pageNo_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:inputType="number"
            />

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_pageNo_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/dialog_pageNo_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ok"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>