<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Feedback">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:text="@string/message"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/feedback_edittext_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/border"
                android:hint="@string/problem_in_app"
                android:inputType="none"
                android:lines="15"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textStyle="italic" />

            <Button
                android:id="@+id/feedback_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/border"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/send"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>